Hidden Particle emitter occludes overlays in Cycles viewport render. #67471

Closed
opened 2019-07-22 21:31:57 +02:00 by Sam Walker · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 382.05

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: 38d4483c6a
Worked: ---

Short description of error
When viewport-rendering a particle emitter with "Show Emitter" un-checked in the Viewport Display particle settings dropdown, the resulting render occludes the non-renderable overlays behind the emitter object (including the grid-floor, light and camera objects, but seemingly not the 3D cursor or origin points). This is an issue when rendering in Cycles, though appears to render as expected in EEVEE.

GIF Example of the issue in Cycles: Viewport Render Bug 01a.gif

Exact steps for others to reproduce the error

  1. Add an object with a default particle system.
  2. Turn on cycles viewport rendering with overlays shown.
  3. Under the particle settings tab, uncheck "Show Emitter" in the "Viewport Display" dropdown.
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 382.05 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: `38d4483c6a` Worked: --- **Short description of error** When viewport-rendering a particle emitter with "Show Emitter" un-checked in the Viewport Display particle settings dropdown, the resulting render occludes the non-renderable overlays behind the emitter object (including the grid-floor, light and camera objects, but seemingly not the 3D cursor or origin points). This is an issue when rendering in Cycles, though appears to render as expected in EEVEE. GIF Example of the issue in Cycles: ![Viewport Render Bug 01a.gif](https://archive.blender.org/developer/F7623457/Viewport_Render_Bug_01a.gif) **Exact steps for others to reproduce the error** 1) Add an object with a default particle system. 2) Turn on cycles viewport rendering with overlays shown. 3) Under the particle settings tab, uncheck "Show Emitter" in the "Viewport Display" dropdown.
Author

Added subscriber: @Hexbob6

Added subscriber: @Hexbob6

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-07-30 17:07:12 +02:00

I'm guessing that the cube is written to the depth buffer even though it is not visible?

I'm guessing that the cube is written to the depth buffer even though it is not visible?

This issue was referenced by c1612ca114

This issue was referenced by c1612ca114df6d4c8b992808fb05ec03199392c1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67471
No description provided.