Fix T67471: hidden particle emitter occludes in Cycles rendered viewport